--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,8 @@ nav > ul > li > a{
 .wraper{
     width: 100%;
     max-width: 90em; 
-    margin: auto;             
+    margin: auto;        
+    padding: 0 0 16px;
 }
 
 
@@ -261,9 +262,6 @@ nav > ul > li > a{
     width:30%;
 }
 
-#skills li{
-    margin-top: 1.75em;  
-}
 
 /*skills bar colour: 8acbf1*/
 
@@ -272,15 +270,17 @@ nav > ul > li > a{
     line-height: 25px;
     -webkit-border-radius: 0.5em;
     border-radius: 0.5em;
+        box-shadow: 0 0 0px 2px #1d2636a1;
     background-color: #fff;
-    border: 2px solid rgba(0, 0, 0, 0.3);
+    margin: 1.98em 0; 
+    overflow: hidden;
     position: relative;
     display: block;
 }
 
 #skills .bars .skillbar {
     display: block; 
-    height: 100%;
+    height: 13px;
     -webkit-border-radius: 0.5em;
     border-radius: 0.5em;
     background-color: #fff;
